# togglelog

./: LICENSE  README.md  dune-project  togglelog.opam
.github/workflows/: main.yml
lib/: dune  mapper.ml  null_mapper.ml  register.ml
test/: dune
test/instrument.t/: dune  run.t  test.ml
test/log/: dune  test-filtered.out.expected  test.ml  test.out.expected
test/null/: dune  test.ml
test/output.t/: dune  filter.ml  run.t
test/type_error.t/: dune  run.t  test.ml
test/typeerror.t/: run.t  test.ml
